Transferindo configuração para localização correta

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -2,6 +2,11 @@
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
+;Setando parametro de sessao do servidor definido no PHP.INI 
+;caso esteja definido de forma diferenteo o que geralmenta acontece
+;em servidor dedicado para certa aplicação
+phpSettings.session.cookie_domain = ''
+
 resources.view.basePath = APPLICATION_PATH "/modules/site/views"
 
 ;Paths
