Organização da estrutura do projeto

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -12,6 +12,9 @@ resources.view.basePath = APPLICATION_PATH "/modules/site/views"
 ;Paths
 includePaths.library = APPLICATION_PATH "/../library"
 
+;Add ao autoloader a biblioteca Simova
+autoloaderNamespaces[] = 'Simova'
+
 includePaths.models = APPLICATION_PATH "/models"
 ;includePaths.forms = APPLICATION_PATH "/modules/admin/forms"
 
