--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,4 +1,4 @@
-[production]
+﻿[production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
@@ -48,6 +48,6 @@ resources.db.adapter = PDO_MYSQL
 resources.db.params.dbname = db_simova
 resources.db.params.host = localhost
 resources.db.params.username = root
-resources.db.params.password = ranelore
+resources.db.params.password = 123
 resources.db.params.charset = utf8
 resources.db.parans.profile = true
