Nova versao de  banco adicionada.
Signed-off-by: Rosete <rosetebsb@gmail.com>

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,2 @@
-copy.src.files=false
-copy.src.target=/var/www/zend_fac
-getter.setter.method.name.generation=AS_JAVA
-index.file=
-run.as=LOCAL
+index.file=index.php
 url=http://localhost/zend_fac/
