--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,4 @@
-file.reference.library-Simova=../../../../usr/local/zend/share/ZendFramework/library/Simova
-file.reference.library-Zend=../../../../../usr/local/zend/gui/library/Zend
-file.reference.library-Zend-1=../../../../usr/local/zend/share/ZendFramework/library/Zend
-ignore.path=
-include.path=\
-    ${file.reference.library-Zend-1}
+include.path=${php.global.include.path}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
