Adicionando atributos no application.ini para php.ini [date.timezone]

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -6,6 +6,7 @@ phpSettings.display_errors = 1
 ;caso esteja definido de forma diferenteo o que geralmenta acontece
 ;em servidor dedicado para certa aplicação
 phpSettings.session.cookie_domain = ''
+phpSettings.date.timezone = 'America/Sao_Paulo'
 
 resources.view.basePath = APPLICATION_PATH "/modules/site/views"
 
@@ -50,4 +51,4 @@ resources.db.params.host = localhost
 resources.db.params.username = root
 resources.db.params.password = 123
 resources.db.params.charset = utf8
-resources.db.parans.profile = true
+resources.db.params.profile = true
