Alteração critica de pacote para funcionamento em nova versao zend-server

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -22,7 +22,7 @@ includePaths.models = APPLICATION_PATH "/models"
 bootstrap.path = APPLICATION_PATH "/Bootstrap.php"
 bootstrap.class = "Bootstrap"
 
-appnamespace = ""
+appnamespace = "App"
 resources.modules[] = ""
 resources.frontController.env = APPLICATION_ENV
 resources.frontController.params.prefixDefaultModule = 1
