--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,14 +1,11 @@
-<<<<<<< HEAD
+file.reference.library-Zend-3=../../../ZendServer/share/ZendFramework/library/Zend
 include.path=${php.global.include.path}
-=======
 file.reference.library-Simova=../../../../usr/local/zend/share/ZendFramework/library/Simova
 file.reference.library-Zend=../../../../../usr/local/zend/gui/library/Zend
 file.reference.library-Zend-1=../../../../usr/local/zend/share/ZendFramework/library/Zend
 file.reference.library-Zend-2=../../../../../usr/local/zend/share/ZendFramework/library/Zend
 ignore.path=
-include.path=\
-    ${file.reference.library-Zend-2}
->>>>>>> e89fbd2931085b626c9411593ef10d73d3419a83
+include.path=\${file.reference.library-Zend-3}
 php.version=PHP_53
 source.encoding=UTF-8
 src.dir=.
