Conclusao login do site.

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -50,6 +50,6 @@ resources.db.adapter = PDO_MYSQL
 resources.db.params.dbname = db_simova
 resources.db.params.host = localhost
 resources.db.params.username = root
-resources.db.params.password = 
+resources.db.params.password = 123
 resources.db.params.charset = utf8
 resources.db.params.profile = true
