--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -47,9 +47,12 @@ phpSettings.error_reporting = ~E_NOTICE
 resources.frontController.params.displayExceptions = 1
 
 resources.db.adapter = PDO_MYSQL
+resources.db.isDefaultTableAdapter = true
 resources.db.params.dbname = db_simova
 resources.db.params.host = localhost
 resources.db.params.username = root
 resources.db.params.password = 123
 resources.db.params.charset = utf8
 resources.db.params.profile = true
+;resources.db.params.profile.enabled = true
+;resources.db.params.profile.class = Zend_Db_Profiler
