--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -51,7 +51,7 @@ resources.db.isDefaultTableAdapter = true
 resources.db.params.dbname = db_simova
 resources.db.params.host = localhost
 resources.db.params.username = root
-resources.db.params.password = 
+resources.db.params.password = 123
 resources.db.params.charset = utf8
 resources.db.params.profile = true
 ;resources.db.params.profile.enabled = true
