--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -1,3 +1,4 @@
+;Estagio da aplicação onde esta se encontra em ambiente de produção (NO AR)
 [production]
 phpSettings.display_startup_errors = 0
 phpSettings.display_errors = 0
@@ -11,7 +12,7 @@ phpSettings.date.timezone = 'America/Sao_Paulo'
 
 resources.view.basePath = APPLICATION_PATH "/modules/site/views"
 
-;Paths
+;Biblioteca padrão do zend
 includePaths.library = APPLICATION_PATH "/../library"
 
 ;Add ao autoloader a biblioteca Simova
@@ -34,12 +35,15 @@ resources.frontController.params.displayExceptions = 0
 
 resources.layout.layoutStatus = 1
 
+;Estagio da aplicação onde esta se encontra em ambiente de produção (EM DESENVOLVIMENTO)
 [development : production]
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 phpSettings.error_reporting = ~E_NOTICE
 resources.frontController.params.displayExceptions = 1
 
+;Definições para conexão com o banco de dados
+;O zend pega estas informações e faz a conexao automaticamente
 resources.db.adapter = PDO_MYSQL
 resources.db.isDefaultTableAdapter = true
 resources.db.params.dbname = db_simova
@@ -48,5 +52,3 @@ resources.db.params.username = root
 resources.db.params.password = 
 resources.db.params.charset = utf8
 resources.db.params.profile = true
-;resources.db.params.profile.enabled = true
-;resources.db.params.profile.class = Zend_Db_Profiler
